manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "twiddit-8098"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "twiddit-8098"
  template:
    metadata:
      labels:
        app: "twiddit-8098"
    spec:
      containers:
        - name: "twiddit-8098"
          image: "twiddit2.azurecr.io/twiddit"
          ports:
          - containerPort: 80
