manifests/post-service.yaml
# deployment
#
# set up a deployment for the user API.

apiVersion : apps/v1
kind: Deployment
metadata:
  name: "twiddit-8098"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "twiddit-8098"
  template:
    metadata:
      labels:
        app: "twiddit-8098"
    spec:
      containers:
        - name: "twiddit-8098"
          image: "twiddit2.azurecr.io/twiddit"
          livenessProbe:
            initialDelaySeconds: 20
            timeoutSeconds: 5
            httpGet:
              port: 80
              path: /healthz
          ports:
          - containerPort: 80

---
# service

apiVersion: v1
kind: Service
metadata:
    name: "twiddit-8098"
    labels:
        app: "twiddit-8098"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "twiddit-8098"

---
# ingress
#
# Sets up an ingress to route traffic to the user service

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: "twiddit-8098"
    labels:
        app: "twiddit-8098"
    annotations:
        kubernetes.io/ingress.class: azure/application-gateway
        appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:
    rules:
    - http:
        paths:
        - path: /api/posts/*
          pathType: Prefix
          backend:
            service:
                name: "twiddit-8098"
                port:
                  number: 80
